--- a/zhenqi2.html
+++ b/zhenqi2.html
@@ -1039,10 +1039,10 @@
                     <h5 style="color: #1976d2; margin: 15px 0 10px 0;">建议:</h5>
                     <ul style="margin: 0; padding-left: 20px; color: #555; line-height: 1.6;">
                         ${optimalWinRate > 0.6 ?
-                            '<li style="color: #4caf50;">🎉 你的胜率相当不错！可以考虑冲击更高阶位</li>' :
+                            '<li style="color: #4caf50;">🎉 你的胜率相当不错！你是高手！</li>' :
                             optimalWinRate > 0.5 ?
                             '<li style="color: #ff9800;">📊 胜率处于平均水平，继续保持稳定发挥</li>' :
-                            '<li style="color: #f44336;">💪 胜率有提升空间，建议复盘战术和卡组搭配</li>'
+                            '<li style="color: #f44336;">💪 胜率有提升空间，吃饭了吗？</li>'
                         }
                         ${relativeError > 15 ? '<li style="color: #ff5722;">⚠️ 拟合误差较大，建议增加模拟次数或检查数据</li>' : ''}
                         <li>置信区间越窄说明预测越稳定可靠</li>
