--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
             <a href="probs.html">我的虫虫呢？</a>
             <span> - 游玩byd找不到虫？看看你多非洲人</span>
         </li>
+        <li>
+            <a href="zhenqi.html">胜率模拟真气图</a>
+            <span> - 如题</span>
+        </li>
+        <li>
+            <a href="zhenqi2.html">真气推算胜率/净胜</a>
+            <span> - 如题</span>
+        </li>
         <hr> <!-- 这是分割线 -->
         <li>
             <a href="https://space.bilibili.com/66638522" target="_blank">作者的阿b地址</a>
