--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
         </li>
         <li>
             <a href="zhenqi.html">胜率模拟真气图</a>
-            <span> - 如题</span>
+            <span> - 如题111</span>
         </li>
         <li>
             <a href="zhenqi2.html">真气推算胜率/净胜</a>
-            <span> - 如题</span>
+            <span> - 如题111</span>
         </li>
         <hr> <!-- 这是分割线 -->
         <li>
