--- a/zhenqi2.html
+++ b/zhenqi2.html
@@ -937,7 +937,7 @@
                 <div class="stats-grid">
                     <div class="stat-item">
                         <div class="stat-value">${(optimalWinRate * 100).toFixed(2)}%</div>
-                        <div class="stat-label">估计真实胜率</div>
+                        <div class="stat-label">估计钻石段位胜率</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-value">${searchInfo.iterations}</div>
