--- a/zhenqi2.html
+++ b/zhenqi2.html
@@ -1030,7 +1030,7 @@
                 <div style="background: #f0f8ff; padding: 15px; border-radius: 8px; border-left: 4px solid #2196f3;">
                     <h5 style="color: #1976d2; margin-bottom: 10px;">如何理解这些数据:</h5>
                     <ul style="margin: 0; padding-left: 20px; color: #555; line-height: 1.6;">
-                        <li><strong>推算胜率:</strong> 基于你的战绩数据，估计你的真实胜率约为 ${(optimalWinRate * 100).toFixed(1)}%</li>
+                        <li><strong>推算胜率:</strong> 基于你的战绩数据，估计你在钻石阶位的胜率约为 ${(optimalWinRate * 100).toFixed(1)}%</li>
                         <li><strong>拟合精度:</strong> 相对误差 ${relativeError.toFixed(2)}% ${relativeError < 5 ? '(拟合优秀)' : relativeError < 10 ? '(拟合良好)' : '(拟合一般)'}</li>
                         <li><strong>置信区间:</strong> 在 ${settings.confidenceLevel}% 的置信水平下，你未来的表现预期范围</li>
                         <li><strong>标准差:</strong> 反映预测结果的稳定性，越小越稳定</li>
