--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
             <a href="zhenqi2.html">真气推算胜率/净胜</a>
             <span> - 如题。</span>
         </li>
+        <li>
+            <a href="zhenqi2jp.html">真气推算胜率/净胜（日文版）</a>
+            <span> - 如题。</span>
+        </li>
         <hr> <!-- 这是分割线 -->
         <li>
             <a href="https://space.bilibili.com/66638522" target="_blank">作者的阿b地址</a>
