--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <span> - 如题。</span>
         </li>
         <li>
-            <a href="zhenqi2jp.html">真气推算胜率/净胜（日文1）</a>
+            <a href="zhenqi2jp.html">真气推算胜率/净胜（日文）</a>
             <span> - 如题。</span>
         </li>
         <hr> <!-- 这是分割线 -->
